Time now updates

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #222;
     color: #fff;
@@ -6,6 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    height: 100%;
     min-width: 100vw;
     flex-direction: column;
 }
@@ -32,6 +39,12 @@ label {
 label div {
     font-size: 1rem;
     margin-bottom: 0.5rem;
+}
+
+#currentTimeZone {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    color: #888;
 }
 
 input[type="text"] {
@@ -63,6 +76,15 @@ button:hover {
     background-color: #555;
 }
 
+button[disabled] {
+    background-color: #555;
+    cursor: not-allowed;
+}
+
+i {
+    margin-right: 0.5rem;
+}
+
 .converter {
     max-width: 500px;
     margin: 2rem auto;
@@ -72,21 +94,6 @@ button:hover {
     width: 100%;
 }
 
-@media only screen and (max-width: 500px) {
-    .converter {
-        padding: 1rem;
-    }
-
-    input[type="text"] {
-        font-size: 1rem;
-    }
-
-    button {
-        font-size: 1rem;
-        padding: 0.6rem 1rem;
-    }
-}
-
 .error {
     background-color: #f8d7da;
     border: 1px solid #f5c6cb;
@@ -94,4 +101,11 @@ button:hover {
     color: #721c24;
     margin: 1rem 0;
     padding: 0.75rem 1.25rem;
+}
+
+@media (max-width: 500px) {
+    .converter {
+        padding: 1rem;
+        width: 90%;
+    }
 }
