--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,8 @@ body {
     color: #fff;
     font-family: sans-serif;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 2em 0;
     align-items: center;
     min-height: 100vh;
     height: 100%;
@@ -166,14 +167,27 @@ body.light .converter {
     -ms-flex-align: center;
     align-items: center;
     padding: 5px;
+    box-shadow: 0px 0px 10px #000;
+}
+
+body.light .label {
+    background-color: #e9e9e9;
+    box-shadow: 0px 0px 11px  rgba(0, 0, 0, 0.5)
 }
 
 .fa-moon {
     color: white;
 }
+
 .fa-sun {
     color: white;
 }
+
+body.light .fa-moon,
+body.light .fa-sun {
+    color: #000;
+}
+
 .ball {
     width: 22px;
     height: 22px;
@@ -189,4 +203,36 @@ body.light .converter {
     transition: -webkit-transform 0.2s linear;
     -o-transition: transform 0.2s linear;
     transition: transform 0.2s linear, -webkit-transform 0.2s linear;
+}
+
+body.light .ball {
+    background: #000;
+}
+
+footer {
+    text-align: center;
+    padding: 1rem;
+    color: #fff;
+    font-size: 0.8rem;
+}
+
+body.light footer {
+    color: #000;
+}
+
+footer i {
+    margin-right: 0;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+body.light footer a {
+    color: #000;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
